--- a/MouseScrollWheelReverser/app.qrc
+++ b/MouseScrollWheelReverser/app.qrc
@@ -1,10 +1,9 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-<file>images/app_icon.png</file>
-<file>images/app_icon_32x32.png</file>
-<file>images/app_icon_32x32_norm.png</file>
-<file>images/app_icon_32x32_rev.png</file>
-<file>images/exit.png</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>images/app_icon.svg</file>
+        <file>images/norm_icon.svg</file>
+        <file>images/rev_icon.svg</file>
+        <file>images/exit.svg</file>
+        <file>usb.ids</file>
+    </qresource>
 </RCC>
-
